--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   skip: True  # [win]
 
 requirements:
@@ -36,3 +36,4 @@ about:
 extra:
   recipe-maintainers:
     - ChristopherHogan
+    - oskooi
