Add providers for linux_ppc64le and linux_aarch64. (#16)
* Add providers for linux_ppc64le and linux_aarch64.

* Bump build number, update SPDX identifier, and update URLs to where they redirect.

* Add spaces for linter.

* Add spaces for linter (again).

* MNT: Re-rendered with conda-build 3.19.2, conda-smithy 3.7.0, and conda-forge-pinning 2020.05.08.11.44.00

* Disable dependency tracking.

* Add make to dependencies.

Co-authored-by: conda-forge-linter <github-actions@email.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,16 +8,17 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/stevengj/{{ name }}/releases/download/v{{version}}/{{ name }}-{{version}}.tar.gz
+  url: https://github.com/NanoComp/{{ name }}/releases/download/v{{ version }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   skip: True  # [win]
 
 requirements:
   build:
     - {{ compiler('c') }}
+    - make
   host:
   run:
 
@@ -26,12 +27,12 @@ test:
     - test -f ${PREFIX}/lib/libctlgeom${SHLIB_EXT}
 
 about:
-  home: http:/github.com/stevengj/libctl
-  license: GPL-2.0
+  home: https://github.com/NanoComp/libctl
+  license: GPL-2.0-or-later
   license_file: COPYING
   summary:  A Guile-based library for supporting flexible control files in scientific simulations
-  doc_url: http://libctl.readthedocs.io
-  dev_url: https://github.com/stevengj/libctl
+  doc_url: https://libctl.readthedocs.io
+  dev_url: https://github.com/NanoComp/libctl
 
 extra:
   recipe-maintainers:
